objects/Recall_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Bulletin_Link__c</fullName>
        <label>Bulletin Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bulletin_Reference__c</fullName>
        <label>Bulletin Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <label>Campaign Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Prefix__c</fullName>
        <label>Campaign Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Reference__c</fullName>
        <label>Campaign Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <label>Campaign Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covering_Letter_Reference__c</fullName>
        <label>Covering Letter Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall_Description__c</fullName>
        <label>Recall Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recall Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Recall Campaigns</relationshipLabel>
        <relationshipName>Recall_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remedy__c</fullName>
        <label>Remedy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Plate__c</fullName>
        <formula>Recall_Vehicle__r.Registration_Plate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Plate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_VIN__c</fullName>
        <formula>Recall_Vehicle__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle VIN</label>
        <type>Text</type>
    </fields>
    <label>Recall Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000000}</displayFormat>
        <label>Recall Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recall Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>